--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
     <script src="/app.js"></script>
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
   </head>
   <body ng-app="ReactorBetaApp">
     <div class="external-container">
