--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
     <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
     <script src="/app.js"></script>
     <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <!-- Search engines -->
+    <meta name="description" content="Stuff you care about, curated by who you trust. Save, share and have your say. Join the list for an invite.">
+    <!-- Google Plus -->
+    <!-- Update your html tag to include the itemscope and itemtype attributes. -->
+    <!-- html itemscope itemtype="http://schema.org/{CONTENT_TYPE}" -->
+    <meta itemprop="name" content="Reactor">
+    <meta itemprop="description" content="Stuff you care about, curated by who you trust. Save, share and have your say. Join the list for an invite.">
+    <meta itemprop="image" content="http://reactorapp.com/images/social.png">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="Stuff you care about, curated by who you trust. Save, share and have your say. Join the list for an invite.">
+    <meta name="twitter:site" content="@reactorapp">
+    <meta name="twitter:title" content="Reactor">
+    <meta name="twitter:description" content="Stuff you care about, curated by who you trust. Save, share and have your say. Join the list for an invite.">
+    <meta name="twitter:creator" content="">
+    <meta name="twitter:image:src" content="http://reactorapp.com/images/social.png">
+    <meta name="twitter:player" content="">
   </head>
   <body ng-app="ReactorBetaApp">
     <div class="external-container">
