--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
     <meta name="twitter:site" content="@reactorapp">
     <meta name="twitter:title" content="Reactor">
     <meta name="twitter:description" content="Stuff you care about, curated by who you trust. Save, share and have your say. Join the list for an invite.">
-    <meta name="twitter:creator" content="">
     <meta name="twitter:image:src" content="http://reactorapp.com/images/social.png">
-    <meta name="twitter:player" content="">
+    <!-- Open Graph General (Facebook & Pinterest) -->
+    <meta property="og:url" content="http://reactorapp.com">
+    <meta property="og:title" content="Reactor">
+    <meta property="og:description" content="Stuff you care about, curated by who you trust. Save, share and have your say. Join the list for an invite.">
+    <meta property="og:site_name" content="Reactor">
+    <meta property="og:image" content="http://reactorapp.com/images/social.png">
   </head>
   <body ng-app="ReactorBetaApp">
     <div class="external-container">
