small social icon

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
     <!-- html itemscope itemtype="http://schema.org/{CONTENT_TYPE}" -->
     <meta itemprop="name" content="Reactor">
     <meta itemprop="description" content="Stuff you care about, curated by who you trust. Save, share and have your say. Join the list for an invite.">
-    <meta itemprop="image" content="http://reactorapp.com/images/social.png">
+    <meta itemprop="image" content="http://reactorapp.com/images/social_small.png">
     <!-- Twitter -->
     <meta name="twitter:card" content="Stuff you care about, curated by who you trust. Save, share and have your say. Join the list for an invite.">
     <meta name="twitter:site" content="@reactorapp">
     <meta name="twitter:title" content="Reactor">
     <meta name="twitter:description" content="Stuff you care about, curated by who you trust. Save, share and have your say. Join the list for an invite.">
-    <meta name="twitter:image:src" content="http://reactorapp.com/images/social.png">
+    <meta name="twitter:image:src" content="http://reactorapp.com/images/social_small.png">
     <!-- Open Graph General (Facebook & Pinterest) -->
     <meta property="og:url" content="http://reactorapp.com">
     <meta property="og:title" content="Reactor">
     <meta property="og:description" content="Stuff you care about, curated by who you trust. Save, share and have your say. Join the list for an invite.">
     <meta property="og:site_name" content="Reactor">
-    <meta property="og:image" content="http://reactorapp.com/images/social.png">
+    <meta property="og:image" content="http://reactorapp.com/images/social_small.png">
   </head>
   <body ng-app="ReactorBetaApp">
     <div class="external-container">
